fixed proxy issue and re-aligned google login button

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,7 +5,7 @@ body {
   #main-header {
     display: flex;
     flex-direction: row;
-    background-color: #3cc97b;
+    background-color: #36b46f;
     color: white;
     font-family: Verdana, sans-serif;
     margin: 0;
@@ -20,7 +20,7 @@ body {
     }
 
     .header-button {
-      padding: 1em 1em 0 3em;
+      padding: 1em;
       text-align: center;
       text-decoration: none;
 
@@ -28,6 +28,11 @@ body {
         color: white;
         text-align: center;
       }
+    }
+
+    #google-login {
+      background-color: #33ac6a;
+      margin-left: auto;
     }
   }
 
